projects/vb6parse/snapshots/parsers/cst/file_operations/line_input/line_input_preserves_whitespace.snap
---
source: projects/vb6parse/tests/file_operations/line_input.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: LineInputStatement
      children:
        - kind: LineKeyword
          text: Line
        - kind: Whitespace
          text: "    "
        - kind: InputKeyword
          text: Input
        - kind: Whitespace
          text: "    "
        - kind: Octothorpe
          text: "#"
        - kind: IntegerLiteral
          text: "1"
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: myString
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
